--- a/project/src/main/res/layout/fragment_tablet_confirmation.xml
+++ b/project/src/main/res/layout/fragment_tablet_confirmation.xml
@@ -120,12 +120,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:drawableLeft="@drawable/ic_tablet_confirmation_book_next_arrow"
+                    android:drawableLeft="?attr/skin_tablet_confirmation_book_next_arrow_icon"
                     android:drawablePadding="10dp"
                     android:gravity="center"
                     android:padding="10dp"
                     android:text="@string/tablet_confirmation_book_next"
-                    android:textColor="#374F6E"
+                    android:textColor="?attr/skin_tablet_confirmation_book_next_arrow_color"
                     android:textSize="14sp"
                     app:textStyle="medium" />
 
@@ -164,7 +164,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:drawableLeft="@drawable/ic_tablet_confirmation_book_next_arrow"
+                            android:drawableLeft="?attr/skin_tablet_confirmation_book_next_arrow_icon"
                             android:drawablePadding="10dp" />
 
                         <LinearLayout
@@ -222,12 +222,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:drawableLeft="@drawable/ic_tablet_confirmation_done_booking"
+                    android:drawableLeft="?attr/skin_tablet_confirmation_done_booking_icon"
                     android:drawablePadding="10dp"
                     android:gravity="center"
                     android:padding="10dp"
                     android:text="@string/tablet_confirmation_done_booking"
-                    android:textColor="#374F6E"
+                    android:textColor="?attr/skin_tablet_confirmation_done_booking_color"
                     android:textSize="14sp"
                     app:textStyle="medium" />
 
@@ -246,12 +246,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:drawableLeft="@drawable/ic_tablet_confirmation_done_booking"
+                    android:drawableLeft="?attr/skin_tablet_confirmation_done_booking_icon"
                     android:drawablePadding="10dp"
                     android:gravity="center"
                     android:padding="10dp"
                     android:text="@string/tablet_confirmation_done_booking"
-                    android:textColor="#374F6E"
+                    android:textColor="?attr/skin_tablet_confirmation_done_booking_color"
                     android:textSize="14sp"
                     app:textStyle="medium" />
 
