--- a/project/src/wotif/res/values/colors.xml
+++ b/project/src/wotif/res/values/colors.xml
@@ -46,10 +46,11 @@
     <color name="tablet_search_result_error_button_pressed_wotif">#D1EAFF</color>
     <color name="tablet_search_result_error_button_wotif">#004E93</color>
     <color name="tablet_results_search_blue_wotif">#608405</color>
-
     <color name="tablet_map_pin_text_color">#DDDFE1</color>
     <color name="bg_sale_text_view_color_wotif">#E57AC231</color>
     <color name="flight_results_row_bg_wotif">#1972B2</color>
     <color name="flight_results_row_return_leg_bg_wotif">#00335D</color>
-
+    <color name="tablet_legal_blurb_text_color_wotif">#7AC231</color>
+    <color name="tablet_confirmation_action_color_wotif">#2CA2E2</color>
+    <color name="tablet_price_expanded_bucket_text_color">#599027</color>
 </resources>
