--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -112,88 +112,14 @@
             android:layout_height="8dp"
             android:background="@drawable/revers_drop_shadow" />
 
-        <LinearLayout
+        <com.expedia.bookings.widget.TravelerPicker
             android:id="@+id/traveler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical"
             android:padding="16dp"
-            android:visibility="gone">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="16dp"
-                android:textColor="@color/cars_actionbar_text_color"
-                android:textStyle="bold"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:orientation="horizontal" >
-
-                <ImageButton
-                    android:id="@+id/adults_minus"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/lx_minus_icon"
-                    android:tint="@color/cars_actionbar_text_color"/>
-
-                <TextView
-                    android:id="@+id/adult"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:gravity="center"
-                    android:textColor="@color/cars_actionbar_text_color"/>
-
-                <ImageButton
-                    android:id="@+id/adults_plus"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/lx_plus_icon"
-                    android:tint="@color/cars_actionbar_text_color"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/children_minus"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/lx_minus_icon"
-                    android:tint="@color/cars_actionbar_text_color"/>
-
-                <TextView
-                    android:id="@+id/children"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:gravity="center"
-                    android:textColor="@color/cars_actionbar_text_color"/>
-
-                <ImageButton
-                    android:id="@+id/children_plus"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/lx_plus_icon"
-                    android:tint="@color/cars_actionbar_text_color"/>
-            </LinearLayout>
-
-        </LinearLayout>
+            android:visibility="gone"/>
 
         <com.mobiata.android.time.widget.CalendarPicker
             android:id="@+id/calendar"
