--- a/project/src/expedia/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/expedia/res/values-sw600dp/tablet_themes.xml
@@ -39,6 +39,7 @@
         <item name="skin_bgSelectedFlightCard">@drawable/bg_selected_flight_card</item>
         <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet</item>
 
+        <item name="skin_icActionBarTripsDrawable">@drawable/ic_action_bar_trips</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.Expedia.Tablet" />
