--- a/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
@@ -41,6 +41,7 @@
         <item name="skin_bgFlightSummaryRowTablet">@drawable/bg_flight_summary_row_tablet</item>
         <item name="skin_bgSelectedFlightCard">@drawable/bg_selected_flight_card</item>
         <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet</item>
+        <item name="skin_icActionBarTripsDrawable">@drawable/ic_action_bar_trips</item>
 
     </style>
 
