--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="240dp"
                 android:scaleType="centerCrop"
-                tools:src="@drawable/bg_flight_summary_row_return_leg_tablet" />
+                tools:src="?attr/skin_bgFlightSummaryRowReturnLegTabletDrawable" />
 
             <View
                 android:layout_width="match_parent"
