--- a/project/src/main/res/layout/section_flight_leg_tablet_blue_card_checked.xml
+++ b/project/src/main/res/layout/section_flight_leg_tablet_blue_card_checked.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/hotel_flight_card_height"
-    android:background="@drawable/bg_selected_flight_card"
+    android:background="?attr/skin_bgSelectedFlightCard"
     android:paddingLeft="@dimen/hotel_flight_card_padding_x"
     android:paddingRight="@dimen/hotel_flight_card_padding_x" >
 
