--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -320,4 +320,8 @@
     <attr name="skin_actionBarShopText" format="reference|string" />
 
     <attr name="skin_bgSaleTextViewDrawable" format="reference" />
+
+    <attr name="skin_bgFlightSummaryRowTablet" format="reference" />
+    <attr name="skin_bgSelectedFlightCard" format="reference" />
+    <attr name="skin_bgFlightSummaryRowReturnLegTabletDrawable" format="reference" />
 </resources>
