--- a/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
@@ -38,6 +38,10 @@
         <item name="skin_tablet_hotel_confirmation_placeholder">@drawable/bg_itin_placeholder_travelocity</item>
 
         <item name="skin_bgSaleTextViewDrawable">@drawable/bg_sale_text_view</item>
+        <item name="skin_bgFlightSummaryRowTablet">@drawable/bg_flight_summary_row_tablet</item>
+        <item name="skin_bgSelectedFlightCard">@drawable/bg_selected_flight_card</item>
+        <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet</item>
+
     </style>
 
     <style name="V2.Theme" parent="Theme.Travelocity.Tablet" />
