--- a/project/src/wotif/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/wotif/res/values-sw600dp/tablet_themes.xml
@@ -39,6 +39,9 @@
         <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_white_wotif</item>
 
         <item name="skin_bgSaleTextViewDrawable">@drawable/bg_sale_text_view_wotif</item>
+        <item name="skin_bgFlightSummaryRowTablet">@drawable/bg_flight_summary_row_tablet_wotif</item>
+        <item name="skin_bgSelectedFlightCard">@drawable/bg_selected_flight_card_wotif</item>
+        <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet_wotif</item>
 
     </style>
 
