--- a/project/src/main/res/layout/fragment_results_dates.xml
+++ b/project/src/main/res/layout/fragment_results_dates.xml
@@ -15,12 +15,12 @@
         android:layout_weight="1"
         app:calendarBaseColor="#000000"
         app:calendarSecondaryColor="#6F6F6F"
-        app:calendarHighlightColor="@color/tablet_results_search_blue"
+        app:calendarHighlightColor="?attr/skin_tabletCalenderResultsSearchBlue"
         app:calendarHighlightInverseColor="#FFFFFF"
         app:calendarTodayColor="#007dff"
         app:calendarInvalidDaysColor="#CFCFCF"
         app:calendarDaysOfWeekColor="#7c7c7c"
-        app:calendarChangeMonthCaretColor="@color/tablet_results_search_blue"
+        app:calendarChangeMonthCaretColor="?attr/skin_tabletCalenderResultsSearchBlue"
         app:calendarHeaderTextSize="16dp"
         app:calendarHeaderTextColor="#444444"
         app:calendarLayout="@layout/widget_calendar_picker_eb"/>
