--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -335,5 +335,6 @@
     <attr name="skin_tablet_confirmation_action_color" format="reference|color" />
     <attr name="skin_tablet_price_expanded_bucket_text_color" format="reference|color" />
     <attr name="skin_tablet_checkout_price_breakdown_icon" format="reference" />
+    <attr name="skin_tabletCalenderResultsSearchBlue" format="reference|color" />
 
 </resources>
