--- a/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/travelocity/res/values-sw600dp/tablet_themes.xml
@@ -43,6 +43,7 @@
         <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet</item>
         <item name="skin_icActionBarTripsDrawable">@drawable/ic_action_bar_trips</item>
 
+        <item name="skin_tabletCalenderResultsSearchBlue">@color/tablet_results_search_blue</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.Travelocity.Tablet" />
