--- a/project/src/wotif/res/values-sw600dp/styles.xml
+++ b/project/src/wotif/res/values-sw600dp/styles.xml
@@ -5,4 +5,14 @@
         <item name="android:progressDrawable">@drawable/ratingbar_star_hotel_details_small_wotif</item>
     </style>
 
+    <style name="Widget.SlidingRadioGroup.TabletFilterControls" parent="Widget">
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="dividerWidth">1dp</item>
+        <item name="selectedDividerColor">#FF1972B2</item>
+        <item name="selectedDrawable">@drawable/btn_tablet_filter_pressed_wotif</item>
+        <item name="sluggishness">150</item>
+        <item name="unselectedDividerColor">#40999999</item>
+        <item name="unselectedDrawable">@drawable/btn_tablet_filter_normal</item>
+    </style>
 </resources>
