--- a/project/src/wotif/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/wotif/res/values-sw600dp/tablet_themes.xml
@@ -56,6 +56,7 @@
         <item name="skin_bgFlightSummaryRowTablet">@drawable/bg_flight_summary_row_tablet_wotif</item>
         <item name="skin_bgSelectedFlightCard">@drawable/bg_selected_flight_card_wotif</item>
         <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet_wotif</item>
+        <item name="skin_tabletCalenderResultsSearchBlue">@color/tablet_calender_results_search_blue_wotif</item>
 
     </style>
 
