--- a/project/src/wotif/res/values/themes.xml
+++ b/project/src/wotif/res/values/themes.xml
@@ -120,6 +120,8 @@
         <item name="skin_itinActionOverflowDrawable">@drawable/ic_menu_overflow_image</item>
         <item name="skin_launchCirclePlaceholderDrawable">@drawable/launch_circle_placeholder_wotif</item>
 
+        <item name="skin_tablet_pin_detail_button_background">@drawable/btn_tablet_launch_screen_wotif</item>
+        <item name="skin_tablet_pin_detail_button_text_color">@color/launch_pin_detail_button_text_wotif</item>
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.Wotif">
