--- a/project/src/main/res/layout-sw600dp/section_credit_card.xml
+++ b/project/src/main/res/layout-sw600dp/section_credit_card.xml
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|right"
         android:layout_marginRight="10dp"
-        android:background="@drawable/div_cvv"
+        android:background="?attr/skin_cvvDivDrawable"
         android:freezesText="true"
         android:gravity="center_horizontal|bottom"
         android:maxLength="4"
