--- a/project/src/main/res/layout-sw600dp-port/section_flight_edit_traveler.xml
+++ b/project/src/main/res/layout-sw600dp-port/section_flight_edit_traveler.xml
@@ -131,7 +131,7 @@
                 android:gravity="center"
                 android:text="@string/seating_preference"
                 android:textAllCaps="true"
-                android:textColor="#2A4367"
+                android:textColor="?attr/skin_sectionFlightEditTravelerLinkColor"
                 android:textStyle="bold"
                 android:textSize="14dp"
                 app:textStyle="medium" />
@@ -153,7 +153,7 @@
                 android:gravity="center"
                 android:text="@string/special_assistance"
                 android:textAllCaps="true"
-                android:textColor="#2A4367"
+                android:textColor="?attr/skin_sectionFlightEditTravelerLinkColor"
                 android:textStyle="bold"
                 android:textSize="14dp"
                 app:textStyle="medium" />
@@ -174,7 +174,7 @@
                 android:gravity="center"
                 android:text="@string/add_redress_num"
                 android:textAllCaps="true"
-                android:textColor="#2A4367"
+                android:textColor="?attr/skin_sectionFlightEditTravelerLinkColor"
                 android:textStyle="bold"
                 android:textSize="14dp"
                 app:textStyle="medium" />
