--- a/project/src/wotif/res/values/colors.xml
+++ b/project/src/wotif/res/values/colors.xml
@@ -55,4 +55,6 @@
     <color name="tablet_price_expanded_bucket_text_color">#599027</color>
     <color name="tablet_calender_results_search_blue_wotif">#1972B2</color>
 
+    <color name="section_flight_edit_traveler_link_color_wotif">#1F8EDE</color>
+
 </resources>
