Address whitelabel breakages in r/expedia-6.1
- Remove content descriptors
- Add drawables that voyages and travelocity were depending on
- Add missing FeatureConfig entries for VSC

--- a/project/src/voyages/res/layout/fragment_phone_launch.xml
+++ b/project/src/voyages/res/layout/fragment_phone_launch.xml
@@ -49,8 +49,7 @@
                 android:drawablePadding="15dp"
                 android:textColor="@android:color/white"
                 android:text="@string/nav_hotels"
-                android:textSize="15dp"
-                android:contentDescription="@string/cd_launch_hotels"/>
+                android:textSize="15dp" />
 
             <TextView
                 android:id="@+id/vsc_flight_button"
@@ -62,8 +61,7 @@
                 android:drawablePadding="15dp"
                 android:textColor="@android:color/white"
                 android:text="@string/nav_flights"
-                android:textSize="15dp"
-                android:contentDescription="@string/cd_launch_flights"/>
+                android:textSize="15dp" />
         </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
