--- a/project/src/travelocity/res/layout/fragment_phone_launch.xml
+++ b/project/src/travelocity/res/layout/fragment_phone_launch.xml
@@ -88,8 +88,7 @@
                 android:gravity="center"
                 android:paddingRight="50dp"
                 android:text="@string/nav_flights"
-                android:textSize="15dp"
-                android:contentDescription="@string/cd_launch_flights" />
+                android:textSize="15dp" />
 
 
             <TextView
@@ -99,8 +98,7 @@
                 android:drawableTop="@drawable/btn_tvly_hotels"
                 android:gravity="center"
                 android:text="@string/nav_hotels"
-                android:textSize="15dp"
-                android:contentDescription="@string/cd_launch_hotels" />
+                android:textSize="15dp" />
 
 
         </LinearLayout>
