Improvement: Updated free cancellation text color of hotel room rate screen.

--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -338,4 +338,5 @@
     <attr name="skin_tabletCalenderResultsSearchBlue" format="reference|color" />
 
     <attr name="skin_sectionFlightEditTravelerLinkColor" format="reference|color" />
+    <attr name="skin_roomRateRefundableCancellationTextColor" format="reference|color" />
 </resources>
