--- a/project/src/main/res/layout/row_tablet_room_rate.xml
+++ b/project/src/main/res/layout/row_tablet_room_rate.xml
@@ -75,7 +75,7 @@
                     android:id="@+id/room_rate_refundable_cancellation_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#008c5d"
+                    android:textColor="?attr/skin_roomRateRefundableCancellationTextColor"
                     android:textSize="16sp"
                     app:textStyle="bold"/>
 
