--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -95,6 +95,7 @@
     <color name="hotel_filter_spinner_color_selected">#CDCED0</color>
     <color name="hotel_filter_spinner_text_color">#393E43</color>
     <color name="etp_text_color">#29a653</color>
+    <color name="room_rate_refundable_cancellation_text_color">#008C5D</color>
 
     <!-- Login -->
     <color name="login_shade_flights">#32000000</color>
