--- a/project/src/wotif/res/values/colors.xml
+++ b/project/src/wotif/res/values/colors.xml
@@ -56,5 +56,6 @@
     <color name="tablet_calender_results_search_blue_wotif">#1972B2</color>
 
     <color name="section_flight_edit_traveler_link_color_wotif">#1F8EDE</color>
+    <color name="room_rate_refundable_cancellation_text_color_wotif">#599027</color>
 
 </resources>
