--- a/project/src/wotif/res/values/colors.xml
+++ b/project/src/wotif/res/values/colors.xml
@@ -57,5 +57,6 @@
 
     <color name="section_flight_edit_traveler_link_color_wotif">#1F8EDE</color>
     <color name="room_rate_refundable_cancellation_text_color_wotif">#599027</color>
+    <color name="tablet_hotel_coupon_text_color_wotif">#1F8EDE</color>
 
 </resources>
