--- a/project/src/wotif/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/wotif/res/values-sw600dp/tablet_themes.xml
@@ -62,6 +62,12 @@
 
     </style>
 
+    <style name="V2.Theme.Activity.TabletWeb">
+        <item name="android:windowActionBarOverlay">false</item>
+        <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletWeb</item>
+        <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_wotif</item>
+    </style>
+
     <style name="V2.Widget.ActionBar.TabletWeb">
         <item name="android:displayOptions">showHome|useLogo|homeAsUp|showTitle</item>
         <item name="android:background">@color/action_bar_bg_color</item>
