--- a/project/src/main/res/layout/widget_phone_launch_btn.xml
+++ b/project/src/main/res/layout/widget_phone_launch_btn.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal">
 
     <FrameLayout
@@ -22,7 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="10dp"
+        android:singleLine="true"
         android:textColor="#FFFFFF"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        app:maxTextSize="20sp"
+        app:minTextSize="16sp" />
 
 </merge>
