New Car Filters
`CarFilter`
- simplify filtering
- use instance methods
- rename supplier/categories fields
- now keeps track of all the possible/supported suppliers and categories
- exposes abstract data types

`CarFilterWidget`
- Remove the working filters and the extra details filter
- Button Apply -> Done
- Now says `Sort & Filter` in the title
- Removed filter cancel button
- Done button click listener just performs `onBackPressed()`
- Rename some helper methods and variables to clearer names
- only show and hide views when rebinding data
- has a clear api for rebinding data, `onTransitionToDetails()` and
  `onTransitionToResults()`
- `CarFilter.getNumCheckedFilters()` to consolidate some code in
  `CarResultsPresenter`
- Always show automatic and manual options
- Always show air conditioning and unlimited mileage options
- Fix umlimited spelling mistake

Various
- Rename some fields in `CarResultsPresenter` to be clearer
- Use more concrete types instead of strings in otto Events
- Add some utility to `CarSearch` for looking things up later
- Remove some unecessary utility in `CarDataUtils`. We can just use the
  enums directly

--- a/project/src/main/res/layout/widget_car_filter.xml
+++ b/project/src/main/res/layout/widget_car_filter.xml
@@ -118,7 +118,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/umlimited_mileage_filter"
+                android:id="@+id/unlimited_mileage_filter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:attr/selectableItemBackground"
@@ -130,7 +130,7 @@
                 android:paddingTop="5dp">
 
                 <TextView
-                    android:id="@+id/umlimited_mileage_filter_text"
+                    android:id="@+id/unlimited_mileage_filter_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -138,7 +138,7 @@
                     android:text="@string/car_filter_checkbox_unlimited_mileage" />
 
                 <CheckBox
-                    android:id="@+id/umlimited_mileage_filter_checkbox"
+                    android:id="@+id/unlimited_mileage_filter_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -184,16 +184,11 @@
                 android:textColor="@color/cars_primary_color" />
 
             <LinearLayout
-                android:id="@+id/filter_suppliers_results"
+                android:id="@+id/filter_suppliers"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical" />
 
-            <LinearLayout
-                android:id="@+id/filter_suppliers_details"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical" />
         </LinearLayout>
     </ScrollView>
 </merge>
