--- a/project/src/lastMinute/res/layout/fragment_phone_launch.xml
+++ b/project/src/lastMinute/res/layout/fragment_phone_launch.xml
@@ -38,4 +38,18 @@
             android:textSize="17dp" />
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom|left"
+        android:paddingBottom="40dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:src="@drawable/lm_home_banner" />
+
+    </RelativeLayout>
 </LinearLayout>
