--- a/project/src/lastMinute/res/layout/lm_section_phone_launch_lob.xml
+++ b/project/src/lastMinute/res/layout/lm_section_phone_launch_lob.xml
@@ -3,13 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/header_margin_top"
     android:orientation="vertical">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#CACACA" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:alpha="0.85"
+        android:background="@color/launch_lob_bg" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/black"
-        android:padding="@dimen/launch_lob_margin">
+        android:layout_height="wrap_content">
+
+        <View
+            android:id="@+id/lob_bg"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/launch_lob_height"
+            android:alpha="0.85"
+            android:background="@color/launch_lob_bg" />
 
         <com.expedia.bookings.widget.LinearLayout
             android:id="@+id/lob_btn_container"
@@ -24,9 +41,10 @@
                 android:id="@+id/hotels_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/launch_lob_margin"
                 android:layout_marginRight="@dimen/launch_lob_margin"
-                android:background="#106E8A"
+                android:layout_weight="1"
+                app:btn_bg="@drawable/bg_lob"
                 app:btn_icon="@drawable/lob_hotel"
                 app:btn_text="@string/nav_hotels" />
 
@@ -34,11 +52,33 @@
                 android:id="@+id/flights_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/launch_lob_margin"
                 android:layout_weight="1"
-                android:background="#106E8A"
+                app:btn_bg="@drawable/bg_lob"
                 app:btn_icon="@drawable/lob_flight"
                 app:btn_text="@string/nav_flights" />
 
         </com.expedia.bookings.widget.LinearLayout>
     </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/shadow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:alpha="0.85"
+            android:background="@color/launch_lob_bg" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:alpha="0.23"
+            android:background="@drawable/lob_box_shadow" />
+    </LinearLayout>
+
 </LinearLayout>
