4597 new hotel suggest

--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -43,7 +43,7 @@
                     android:tint="#FFFFFF" />
 
                 <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
-                    android:id="@+id/pickup_location"
+                    android:id="@+id/hotel_location"
                     style="@style/CarAutocomplete"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
