--- a/project/src/main/res/layout/section_cars_supplier_filter_row.xml
+++ b/project/src/main/res/layout/section_cars_supplier_filter_row.xml
@@ -16,7 +16,8 @@
         android:id="@+id/vendor"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textColor="@color/tablet_filter_checkbox_text" />
 
     <CheckBox
         android:id="@+id/vendor_check_box"
