--- a/project/src/main/res/layout/widget_lx_ticket_selection.xml
+++ b/project/src/main/res/layout/widget_lx_ticket_selection.xml
@@ -112,6 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center"
         android:padding="14dp">
 
         <TextView
