--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -205,6 +205,7 @@
         <item name="android:textColorHint">#FFFFFF</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/autocomplete_background</item>
         <item name="android:theme">@style/CarAutocompleteTheme</item>
     </style>
 
