--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -75,6 +75,7 @@
         <item name="android:textColorHint">#FFFFFF</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">15sp</item>
+        <item name="android:background">@drawable/autocomplete_background</item>
         <item name="android:theme">@style/LXAutocompleteTheme</item>
     </style>
 
