--- a/project/src/main/res/layout/widget_car_filter.xml
+++ b/project/src/main/res/layout/widget_car_filter.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <ScrollView
+        <com.expedia.bookings.widget.ScrollView
+            android:id="@+id/car_filter_scrollview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="none">
@@ -198,7 +199,7 @@
                     android:layout_height="52dp" />
 
             </LinearLayout>
-        </ScrollView>
+        </com.expedia.bookings.widget.ScrollView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/dynamic_feedback_container"
@@ -207,6 +208,7 @@
             android:layout_gravity="bottom"
             android:layout_margin="16dp"
             android:background="#ffffff"
+            android:clickable="true"
             app:cardCornerRadius="18dp"
             app:cardPreventCornerOverlap="false" >
 
