--- a/project/src/main/res/layout/widget_car_filter.xml
+++ b/project/src/main/res/layout/widget_car_filter.xml
@@ -208,7 +208,7 @@
             android:layout_margin="16dp"
             android:background="#ffffff"
             app:cardCornerRadius="18dp"
-            app:cardElevation="15dp">
+            app:cardPreventCornerOverlap="false" >
 
             <LinearLayout
                 android:layout_width="match_parent"
