Adjust some loading animation stuff
- Don't pad CardView pre-lollipop
- Don't use OptimizedImageView when View will do
- Consolidate animation code for color cross-fading

--- a/project/src/main/res/layout/launch_tile_loading_widget.xml
+++ b/project/src/main/res/layout/launch_tile_loading_widget.xml
@@ -7,9 +7,9 @@
     android:layout_height="160dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="1dp"
-    app:cardPreventCornerOverlap="false">
+    app:cardPreventCornerOverlap="false" >
 
-    <com.expedia.bookings.widget.OptimizedImageView
+    <View
         android:id="@+id/background_image_view"
         android:layout_width="match_parent"
         android:layout_height="144dp" />
