--- a/project/src/main/res/layout/car_lx_loading_animation_widget.xml
+++ b/project/src/main/res/layout/car_lx_loading_animation_widget.xml
@@ -2,15 +2,16 @@
 <android.support.v7.widget.CardView
     android:id="@+id/loading_card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="@dimen/car_search_list_image_container_margin"
     android:layout_marginRight="@dimen/car_search_list_image_container_margin"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="1dp">
+    app:cardCornerRadius="4dp"
+    app:cardElevation="1dp"
+    app:cardPreventCornerOverlap="false" >
 
-    <com.expedia.bookings.widget.OptimizedImageView
+    <View
         android:id="@+id/background_image_view"
         android:layout_width="match_parent"
         android:layout_height="?attr/card_list_image_container_height" />
