--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -319,4 +319,6 @@
     <attr name="skin_actionBarShopText" format="reference|string" />
     <attr name="skin_confirmationHeaderHotelDividerLineColor" format="reference|color" />
     <attr name="skin_confirmationHeaderFlightDividerLineColor" format="reference|color" />
+    <attr name="skin_checkmarkFlightDrawable" format="reference" />
+
 </resources>
