--- a/project/src/main/res/layout/activity_flight_overview_and_checkout.xml
+++ b/project/src/main/res/layout/activity_flight_overview_and_checkout.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/free_cancellation_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/checkmark_flight"
+                    android:drawableLeft="?attr/skin_checkmarkFlightDrawable"
                     android:drawablePadding="8dp"
                     android:layout_gravity="center"
                     android:gravity="center"
