--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -228,6 +228,7 @@
         <item name="skin_totalDueToday">@string/total_due_today</item>
         <item name="skin_confirmationHeaderHotelDividerLineColor">@color/confirmation_header_divider_hotel</item>
         <item name="skin_confirmationHeaderFlightDividerLineColor">@color/confirmation_header_divider_flight</item>
+        <item name="skin_checkmarkFlightDrawable">@drawable/checkmark_flight</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
