--- a/project/src/wotif/res/values/themes.xml
+++ b/project/src/wotif/res/values/themes.xml
@@ -117,6 +117,8 @@
 
         <item name="android:actionOverflowButtonStyle">@style/OverflowMenuButton</item>
         <item name="actionOverflowButtonStyle">@style/OverflowMenuButton</item>
+        <item name="skin_checkmarkFlightDrawable">@drawable/checkmark_flight_wotif</item>
+
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.Wotif">
